--- a/Project 1 - Weather App/index.html
+++ b/Project 1 - Weather App/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
     <script src="main.js" defer></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/3.0.2/topojson.js"></script>
     <title>Weather App</title>
 </head>
 
@@ -16,6 +18,9 @@
 
 <body>
 
+       <svg width="960" height ="500"></svg>
+    
+  
 
     <div class="card">
         <div class="search">
