--- a/Project 1 - Weather App/index.html
+++ b/Project 1 - Weather App/index.html
@@ -19,6 +19,10 @@
 <body>
 
 
+    <video id="videoBG" autoplay muted loop>
+        <source src="/Videos/Overcast.mp4" type="video/mp4">
+    </video>
+
     <div class="WorldMap"> 
         <h2> Weather Atlas</h2>
          <svg width="960" height ="500">    
