--- a/Project 1 - Weather App/index.html
+++ b/Project 1 - Weather App/index.html
@@ -20,7 +20,7 @@
 
 
     <video id="videoBG" autoplay muted loop>
-        <source src="/Project 1 - Weather App/Videos/Overcast.mp4" type="video/mp4">
+        <source src="/Overcast.mp4" type="video/mp4">
     </video>
 
     <div class="WorldMap"> 
